@@ -21,14 +21,14 @@ void UpdateSelection(Player& player)
 	SDL_Rect peonBoundingBox = BoundingBoxFromUnit(peon);
 	SDL_Rect selectionBoundingBox = BoundingBoxFromMouse(mouse);
 
-	if (DoesBBoxesCollide(selectionBoundingBox, peonBoundingBox))
+	if (DoesBBoxesCollide(&selectionBoundingBox, &peonBoundingBox))
 	{
 		player.selectedUnit = &peon;
 		return;
 	}
 
 	SDL_Rect gruntBoundingBox = BoundingBoxFromUnit(grunt);
-	if (DoesBBoxesCollide(gruntBoundingBox, selectionBoundingBox))
+	if (DoesBBoxesCollide(&gruntBoundingBox, &selectionBoundingBox))
 	{
 		player.selectedUnit = &grunt;
 		return;
